libgphoto2 2.5.29.1 development snapshot

general:
* fix parallel builds by requiring gettext 0.19.1 for builds from git (PR #797)

------------------------------------------------------------------------------
libgphoto2 2.5.29 release

general:
* fixes build failures of libgphoto2 frontends and builds using the
  wrong libgphoto2 headers (issue #717)

ptp2:
* fixed a regression in Fuji preview capture which would lead to crashes
* made the wait-event property extractor more robust (it sometimes gets NULL ptrs), hopefully fixing Sony crashes
* sony: fixed a crash in sony f-number
* panasonic: added more configs adjustgm, adjustab, colortemp, afmode, mfadjust, expmode, recording
* fixed some bugs caused by refactoring / memory leak fixes
* added:
  - Kodak m531
  - HP Photosmart E331
  - Nikon DSC 6

translations:
* updated polish, ukrainian, russian, serbian
* added romanian
------------------------------------------------------------------------------
libgphoto2 2.5.28 release

general:
* OS/2 support removed (broken and unused since at least 2006)
* remove built-in rpm packaging (use distro packaging instead)
* remove linux-hotplug rule creation (removed from distros around 2006)
* remaining text which was iso-8859 is UTF-8 now (except one po file)
* To override docdir and htmldir, use configure arguments --docdir=
  and --htmldir= instead of --with-doc-dir= and --with-html-dir=
* some code cleanups, especially handling of include files and i18n handling

ptp2:
* wait event
  * property changes now reported with "'name' to 'value'" added
  * object info changes now reported as FILE_CHANGED events (e.g. if you change protection flags)
* Nikon J1: capture fixed
* Olympus: fixed that wait time was twice as long as required if no events arrived
* Sigma Fp: added basic beta support for capture, live view and config.
* Sony:
  * mark all widgets as read-write again, read-only logic was not 100% correct
  * speed-ups and fixes to the stepping based config setting